fix(styles): fix wrong color scaffolding

--- a/projects/styles/scss/functions/color.scss
+++ b/projects/styles/scss/functions/color.scss
@@ -4,7 +4,7 @@
 
   @if $contrast != 'color' {
 
-    $contrast: 'c-#{$contrast}';
+    $contrast: '#{$contrast}';
   }
 
   @if $opacity == 1 {
